# knowledge-engine

./: .gitignore  README.md  knowledge-engine-purpose.md  plan.md  pyproject.toml  rag-config.yaml
.github/: copilot-instructions.md
.github/agents/: python-mcp-expert.agent.md
.github/prompts/: python-mcp-server-generator.prompt.md
.rag-data/: fts.db
feature-plans/: 01-wikilinks-and-backlinks.md  02-progressive-summarization.md  03-staleness-metrics.md  04-review-tracking.md  05-usage-analytics.md  06-explicit-relationship-types.md  07-contextual-retrieval.md  08-smart-capture.md
plans/: knowledge-engine-purpose.md  plan.md
src/rag_mcp/: __init__.py  __main__.py  config.py  crawler.py  fts_store.py  indexer.py  markdown_parser.py  server.py  vector_store.py
src/rag_mcp/web/: app.py
src/rag_mcp/web/static/css/: style.css
src/rag_mcp/web/static/js/: app.js  bubble-diagram.js
src/rag_mcp/web/templates/: admin.html  base.html  category.html  document.html  index.html  search.html
tests/: conftest.py  test_config.py  test_crawler.py  test_fts_store.py  test_indexer.py  test_parser.py  test_vector_store.py  test_web.py
